<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fitsSystemWindows="true"
    android:orientation="vertical">


    <com.mkean.demo.view.ProgressStateLayout
        android:id="@+id/psl_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <include layout="@layout/title_bar_wait_assess" />

            <include layout="@layout/login_choose_login_type" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/login_phone" />

                    <EditText
                        android:id="@+id/et_login_phone"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginLeft="20dp"
                        android:background="@null"
                        android:hint="@string/login_et_phone"
                        android:inputType="phone"
                        android:maxLength="20"
                        android:singleLine="true"
                        android:textColor="@color/text_color_3"
                        android:textColorHint="@color/text_color_9"
                        android:textSize="15sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="2dp"
                    android:background="@color/divider" />

                <TextView
                    android:id="@+id/tv_phone_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/icon_login_error"
                    android:textColor="@color/error_red"
                    android:textSize="12sp"
                    android:visibility="invisible" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="12dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/login_verification" />

                    <EditText
                        android:id="@+id/et_login_password"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/login_et_password"
                        android:inputType="number"
                        android:maxLength="20"
                        android:singleLine="true"
                        android:textColor="@color/text_color_3"
                        android:textColorHint="@color/text_color_9"
                        android:textSize="15sp" />

                    <ImageView
                        android:id="@+id/pwd_is_show"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:src="@mipmap/according_hide"
                        android:visibility="gone" />

                    <View
                        android:id="@+id/view_divider"
                        android:layout_width="2dp"
                        android:layout_height="25dp"
                        android:background="@color/divider" />

                    <TextView
                        android:id="@+id/btn_login_send_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lines="1"
                        android:padding="10dp"
                        android:text="@string/login_btn_send_code"
                        android:textColor="@color/new_theme_color"
                        android:textSize="14sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="2dp"
                    android:background="@color/divider" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp">

                    <TextView
                        android:id="@+id/tv_password_error"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@mipmap/icon_login_error"
                        android:lines="1"
                        android:textColor="@color/error_red"
                        android:textSize="12sp"
                        android:visibility="invisible" />

                    <TextView
                        android:id="@+id/tv_phone_verification_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/login_no_get_verification_code"
                        android:textColor="@color/new_theme_color"
                        android:textSize="14sp"
                        android:visibility="invisible" />

                </RelativeLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btn_login_login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/select_login_btn_color"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/ll_login_register"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_not_has_account"
                        android:textColor="@color/text_color_6"
                        android:textSize="13sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableRight="@mipmap/login_arrow"
                        android:text="@string/register"
                        android:textColor="@color/new_theme_color"
                        android:textSize="13sp" />

                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tv_login_look_back_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_look_back_password"
                    android:textColor="@color/new_theme_color"
                    android:textSize="13sp" />
            </LinearLayout>
            
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <include layout="@layout/login_by_third"/>

            </RelativeLayout>


        </LinearLayout>
    </com.mkean.demo.view.ProgressStateLayout>
</LinearLayout>